# simple-chat

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: urls.py
backend/apps/api/base/: pagination.py  views.py
backend/apps/api/v1/: serializers.py  urls.py  views.py
backend/apps/db/chats/: __init__.py  admin.py  apps.py  models.py
backend/apps/db/chats/migrations/: 0001_initial.py
backend/apps/db/users/: admin.py  models.py
backend/apps/db/users/migrations/: 0001_initial.py
backend/apps/service/management/commands/: create_superuser.py
backend/settings/: base.py
backend/settings/components/: _apps.py  _base.py  _database.py  _jazzmin.py  _middleware.py  _rest.py
docker/compose/: docker-compose.local.yml
docker/db/: init.sql
docker/django/: Dockerfile
docker/environment/: app.local.env  db.local.env
